Fixed problem with h3 on small screens with stock styles overwriting custom

--- a/css/iii_custom.css
+++ b/css/iii_custom.css
@@ -34,10 +34,6 @@ td#coverImage {
 	width: 10% !important;
 }
 
-.bareBreaker {
-	color: #333333 !important;
-}
-
 .bibInfoLabel {
 	width: 20%;
 }
