--- a/css/iii_stock.css
+++ b/css/iii_stock.css
@@ -946,8 +946,6 @@ a img {border: none;}
 
 .bareCaption {font-weight:bold;}
 
-.bareBreaker {border-top:1px dashed #477295; margin:5px 5px 5px 0; padding:5px 0; font-weight:bold;color: #FF0808;}
-
 #bareRes .bibResourceTableHeader {display:none}
 
 .pinReset {margin:2%;padding:8px;background:#fff;border:2px solid #f9f9f9}
